2008-05-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* pf.cpp (main): Like compiler for iptables, compiler for PF now
	supports multiple rule sets for policy and nat. Each rule set is
	translated into corresponding anchor .conf file. If some rule in
	another rule set references it via action Branch, corresponding
	"anchor" configuration line is generated, but if it is not
	references from any rule, the anchor .conf file is still
	created. Rule sets "Policy" and "NAT" are configured "main" or
	"root" and placed in the main .conf file with the name of the
	firewall object.

2008-05-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* ipt.cpp (main): Compiler for iptables processes all Policy and
	NAT rulesets that firewall object has, regardless of whether they
	are referenced from any rules with action Branch or not. This is a
	change compared to the behavior of 2.1 which processed only those
	branch rule sets that were used in Branch rules. Each rule set
	that has name other than "Policy" is placed in a chain with the
	name the same as the name of the rule set. This way the user can
	create multiple rule sets and place them in different chains,
	control to these chains can be passed in the iptables commands
	supplied in prolog or epilog scripts.

	Another reason for this is to allow the user to place rules for
	ipv4 and ipv6 in separate rule sets. An attribute "address_family"
	will be added to objects Policy and NAT later on to be able to
	mark rule sets as belonging to either ipv4 or ipv6 address
	family. This separation helps avoid ambiguity that is possible in
	mixed rule sets (when both ipv4 and ipv6 rules are mixed in the
	same rule set). Suppose we allow the user to put both ipv4 and
	ipv6 rules in the same rule set and the user creates a rule with
	ipv4 object in Dst with negation. "Not host A", where "host A"
	translates into one ipv4 address should probably include "all
	ipv6" as well, which means that this simple rule can inadvertenly